# type-indexed-queues

./: .gitignore  README.md  report.html  stack.yaml  type-indexed-heaps.cabal  type-indexed-queues.cabal
bench/: bench.hs
docs/: Data-BinaryTree.html  Data-Heap-Class.html  Data-Heap-Indexed-Binomial.html  Data-Heap-Indexed-Erased.html  Data-Heap-Indexed-Skew.html  Data-Heap-Leftist.html  Data-Heap-Pairing.html  Data-Heap-Skew.html  Data-Heap-WithDict.html  Data-RoseTree.html  Data-Traversable-Sort.html  Data-Tree-Replicate.html  LICENSE  TypeLevel-Nat-Proofs.html  doc-index-N.html  doc-index-O.html  doc-index.html  index.html  mini_Data-Heap-Indexed-Class.html  mini_Data-Heap-Indexed-Leftist.html  mini_Data-Heap-Indexed-Pairing.html  mini_Data-Heap-Indexed-Skew.html  mini_Data-Heap-Leftist.html  mini_Data-Heap-Skew.html  mini_Data-RoseTree.html  mini_Data-Traversable-Sort.html  mini_Data-Tree-Replicate.html  mini_TypeLevel-Bool.html  type-indexed-heaps.txt
docs/all/: doc-index-124.html  doc-index-38.html  doc-index-42.html  doc-index-43.html  doc-index-46.html  doc-index-47.html  doc-index-58.html  doc-index-60.html  doc-index-61.html  doc-index-94.html  doc-index-A.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-J.html  doc-index-K.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-Q.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  doc-index-V.html  doc-index-W.html  doc-index-X.html  doc-index-Z.html  index.html
docs/all/docs/: doc-index-36.html  doc-index-58.html  doc-index-H.html  doc-index-I.html  doc-index-Q.html  doc-index-R.html  doc-index-S.html  doc-index-U.html
docs/doc/: doc-index-33.html  doc-index-P.html  doc-index-R.html  doc-index.html
docs/doc/all/: doc-index-43.html  doc-index-58.html  doc-index-C.html  doc-index-L.html  doc-index-N.html  doc-index-P.html  doc-index-S.html  doc-index-Y.html  index.html
docs/doc/docs/: doc-index.html
docs/doc/ghc-typelits-natnormalise-0.5.2/: index.html
docs/doc/type-indexed-heaps-0.1.0.0/: Data-Heap-Binomial.html  Data-Heap-Class.html  Data-Heap-Indexed-Braun.html  Data-Heap-Indexed-Leftist.html  Data-Heap-Indexed-Pairing.html  Data-Heap-Pairing.html  Data-Heap-Skew.html  TypeLevel-Bool.html  TypeLevel-Singletons.html  doc-index.html  index.html  mini_Data-BinaryTree.html  mini_Data-Heap-Indexed-Binomial.html  mini_Data-Heap-Indexed-Class.html  mini_Data-Heap-Pairing.html  mini_Data-Heap-WithDict.html  mini_TypeLevel-Singletons.html  type-indexed-heaps.txt
docs/docs/: index.html
docs/ghc-8.0.2/src/: Config.html  (+1 more)
docs/ghc-tcplugins-extra-0.2/: GHC-TcPluginM-Extra.html  doc-index.html  ghc-tcplugins-extra.haddock  ghc-tcplugins-extra.txt  index.html  mini_GHC-TcPluginM-Extra.html
docs/ghc-typelits-natnormalise-0.5.2/: GHC-TypeLits-Normalise-SOP.html  GHC-TypeLits-Normalise-Unify.html  GHC-TypeLits-Normalise.html  doc-index.html  ghc-typelits-natnormalise.haddock  ghc-typelits-natnormalise.txt  mini_GHC-TypeLits-Normalise-Unify.html  mini_GHC-TypeLits-Normalise.html
docs/src/: Data.Heap.Braun.html  Data.Heap.Class.html  Data.Heap.Indexed.Erased.html  Data.Heap.Leftist.html  Data.Heap.Pairing.html  Data.Heap.WithDict.html  Data.RoseTree.html  Data.Traversable.Sort.html  TypeLevel.Bool.html  TypeLevel.Singletons.html
docs/type-indexed-heaps-0.1.0.0/: Data-Heap-Binomial.html  Data-Heap-Braun.html  Data-Heap-Indexed-Binomial.html  Data-Heap-Indexed-Braun.html  Data-Heap-Indexed-Class.html  Data-Heap-Indexed-Erased.html  Data-Heap-Indexed-Leftist.html  Data-Heap-Indexed-Pairing.html  Data-Heap-Indexed-Skew.html  Data-Heap-Leftist.html  Data-Heap-WithDict.html  Data-List-Indexed.html  Data-Traversable-Parts.html  Data-Traversable-Sort.html  TypeLevel-Nat.html  doc-index.html  index.html  mini_Data-Heap-Binomial.html  mini_Data-Heap-Braun.html  mini_Data-Heap-Class.html  mini_Data-Heap-Indexed-Braun.html  mini_Data-Heap-Indexed-Erased.html  mini_Data-List-Indexed.html  mini_Data-Traversable-Sort.html  mini_TypeLevel-Nat-Proofs.html  mini_TypeLevel-Nat.html  type-indexed-heaps.haddock  type-indexed-heaps.txt
docs/type-indexed-queues-0.1.0.0/: Data-BinaryTree.html  Data-Queue-Binomial.html  Data-Queue-Braun.html  Data-Queue-Indexed-Binomial.html  Data-Queue-Indexed-Braun.html  Data-Queue-Indexed-Class.html  Data-Queue-Indexed-Erased.html  Data-Queue-Indexed-Leftist.html  Data-Queue-Indexed-List.html  Data-Queue-Indexed-Pairing.html  Data-Queue-Indexed-Skew.html  Data-Queue-Leftist.html  Data-Queue-Skew.html  Data-Traversable-Parts.html  Data-Tree-Replicate.html  TypeLevel-Bool.html  TypeLevel-Nat-Proofs.html  TypeLevel-Nat.html  TypeLevel-Singletons.html  doc-index.html  index.html  mini_Data-Queue-Binomial.html  mini_Data-Queue-Braun.html  mini_Data-Queue-Class.html  mini_Data-Queue-Indexed-Binomial.html  mini_Data-Queue-Indexed-Class.html  mini_Data-Queue-Indexed-Erased.html  mini_Data-Queue-Indexed-List.html  mini_Data-Queue-Indexed-Skew.html  mini_Data-Queue-Leftist.html  mini_Data-Queue-Pairing.html  mini_Data-Queue-Skew.html  mini_Data-Queue-WithDict.html  mini_Data-Traversable-Parts.html  mini_TypeLevel-Nat-Proofs.html  type-indexed-queues.haddock  type-indexed-queues.txt
docs/unix-2.7.2.1/: unix.txt
socs/all/: doc-index-42.html  doc-index-43.html  doc-index-45.html  doc-index-62.html  doc-index-94.html  doc-index-C.html  doc-index-E.html  doc-index-H.html  doc-index-O.html  doc-index-Q.html  index.html
socs/base-4.9.1.0/: base.txt
socs/ghc-typelits-natnormalise-0.5.2/: mini_GHC-TypeLits-Normalise-SOP.html
socs/type-indexed-queues-0.1.0.0/: Data-Queue-Class.html  Data-Queue-Pairing.html  Data-Queue-WithDict.html  mini_Data-Queue-Indexed-Braun.html  mini_Data-Queue-Indexed-Leftist.html  mini_Data-Queue-Indexed-Pairing.html  mini_TypeLevel-Singletons.html
src/Data/: BinaryTree.hs  BinomialHeap.hs  RoseTree.hs
src/TypeLevel/: Bits.hs  Bool.hs  LitSing.hs  Nat.hs  Singletons.hs
test/: Spec.hs
(+110 files in other folders)
