name:                type-indexed-heaps
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/oisdk/type-indexed-heaps
license:             MIT
license-file:        LICENSE
author:              Donnacha Oisín Kidney
maintainer:          mail@doisinkidney.com
copyright:           2016 Donnacha Oisín Kidney
category:            Data Structures
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Heap.Binomial
                     , Data.Heap.Pairing
                     , Data.Heap.Skew
                     , Data.Heap.Leftist
                     , Data.Heap.Braun
                     , Data.Heap.Class
                     , Data.Heap.Indexed.Pairing
                     , Data.Heap.Indexed.Binomial
                     , Data.Heap.Indexed.Skew
                     , Data.Heap.Indexed.Leftist
                     , Data.Heap.Indexed.Class
                     , Data.Traversable.Sort
                     , TypeLevel.Nat
                     , Data.BinaryTree
  other-modules:       TypeLevel.Singletons
                     , TypeLevel.Nat.Proofs
  build-depends:       base >= 4.7 && < 5
                     , ghc-typelits-natnormalise >= 0.5
                     , deepseq >= 1.4
  default-language:    Haskell2010

benchmark bench
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             bench.hs
  ghc-options:         -O2 -rtsopts -threaded

  build-depends:       base >= 4.8
                     , type-indexed-heaps
                     , criterion >= 0.6
                     , containers >= 0.5
                     , random >= 1.1
                     , pqueue >= 1.3

test-suite type-indexed-heaps-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , type-indexed-heaps
                     , QuickCheck >= 2.8
                     , doctest
                     , containers >= 0.5
                     , tasty >= 0.11
                     , tasty-quickcheck >= 0.8
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/oisdk/type-indexed-heaps
